# cmake_template

./: CMakeLists.txt  README.md  build.sh  check_dlib.cpp  check_opencv.cpp  check_version.cpp
